--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ before_install:
 install:
   - npm install
 script:
-  - git checkout master
-  - git merge -no-commit docs
+  - git checkout --track master
+  - git merge --no-commit docs
   - npm build
   - git add .
   - git commit -m "Commit by Travis CI (JOB $TRAVIS_JOB_NUMBER)"
