--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
     - "src/node_modules"
 before_install:
   - openssl aes-256-cbc -K $encrypted_dce4190560e5_key -iv $encrypted_dce4190560e5_iv -in travis_rsa.enc -out travis_rsa -d
-  - cp travis_rsa ~/.ssh/id_rsa
+  - mv travis_rsa ~/.ssh/id_rsa
   - chmod 0600 ~/.ssh/id_rsa
   - git config --global user.name okaduki
   - git config --global user.email "okaduki1@gmail.com"
@@ -18,6 +18,7 @@ install:
   - npm install
 script:
   - npm build
+  - cd docs
   - git init
   - git add .
   - git commit -m "Commit by Travis CI (JOB $TRAVIS_JOB_NUMBER)"
