--- a/package.json
+++ b/package.json
@@ -3,22 +3,21 @@
   "version": "1.0.0",
   "description": "Solution for TAACOPS",
   "scripts": {
-    "build": "( cd src && gitbook install && book sm && cd .. ) && gitbook build src docs",
-    "serve": "gitbook serve src docs"
+    "build": "honkit build src docs"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/okaduki/TAACOPS.git"
   },
   "author": "okaduki",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/okaduki/TAACOPS/issues"
   },
   "homepage": "https://github.com/okaduki/TAACOPS#readme",
-  "dependencies": {
-    "gitbook-cli": "^2.3.2",
-    "gitbook-summary": "^1.2.2",
-    "npm": "^6.14.6"
+  "devDependencies": {
+    "gitbook-plugin-expandable-chapters": "^0.2.0",
+    "gitbook-plugin-katex": "^1.1.4",
+    "honkit": "^3.6.16"
   }
 }
