--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ branches:
   only:
     - docs
 node_js:
-  - "7"
+  - "node"
 cache:
   directories:
     - "node_modules"
     - "src/node_modules"
 before_install:
-  - openssl aes-256-cbc -K $encrypted_dce4190560e5_key -iv $encrypted_dce4190560e5_iv -in travis_rsa.enc -out travis_rsa -d
+  - openssl aes-256-cbc -K $encrypted_0ddd2445e49f_key -iv $encrypted_0ddd2445e49f_iv -in travis_rsa.enc -out travis_rsa -d
   - mv travis_rsa ~/.ssh/id_rsa
   - chmod 0600 ~/.ssh/id_rsa
   - git config --global user.name okaduki
